--- a/package.json
+++ b/package.json
@@ -4,15 +4,28 @@
   "description": "Start a full-stack genezio app",
   "main": "src/index.ts",
   "scripts": {
-    "build": "npx tsc && npm install -g",
-    "test": "jest"
+    "copy-non-ts-files": "copyfiles -a -u 1 \"src/templates/basic/**/*\" \"build/\"",
+    "clean": "rimraf build",
+    "build": "npx tsc && npm run copy-non-ts-files && npm install -g",
+    "lint": "eslint . --report-unused-disable-directives",
+    "test": "jest",
+    "release": "npm run build && npm publish"
   },
+  "type": "module",
   "author": "genezio",
   "license": "GPL-3",
   "repository": {
     "type": "git",
     "url": "https://github.com/Genez-io/create-genezio-app.git"
   },
+  "keywords": [
+    "genezio",
+    "create-genezio-app",
+    "serverless",
+    "react",
+    "typescript",
+    "javascript"
+  ],
   "bin": {
     "create-genezio-app": "./build/index.js"
   },
@@ -21,11 +34,28 @@
   },
   "dependencies": {
     "commander": "~10.0.0",
+    "execa": "~7.1.1",
+    "fs-extra": "~11.1.1",
     "inquirer": "~8.2.5",
+    "loglevel": "~1.8.1",
+    "mustache": "~4.2.0",
     "process": "~0.11.10",
-    "readline": "~1.3.0"
+    "readline": "~1.3.0",
+    "simple-git": "~3.17.0",
+    "unique-names-generator": "~4.7.1"
   },
   "devDependencies": {
-    "@types/inquirer": "~9.0.3"
+    "@types/fs-extra": "~11.0.1",
+    "@types/inquirer": "~9.0.3",
+    "@types/mustache": "~4.2.2",
+    "@typescript-eslint/eslint-plugin": "~5.59.0",
+    "copyfiles": "~2.4.1",
+    "eslint": "~8.38.0",
+    "eslint-config-standard-with-typescript": "~34.0.1",
+    "eslint-plugin-import": "~2.27.5",
+    "eslint-plugin-n": "~15.7.0",
+    "eslint-plugin-promise": "~6.1.1",
+    "rimraf": "~5.0.0",
+    "typescript": "~5.0.4"
   }
 }
