Add more types and defaults
Signed-off-by: Andreia Ocanoaia <andreia.ocanoaia@gmail.com>

--- a/src/templates/basic/tsconfig.json
+++ b/src/templates/basic/tsconfig.json
@@ -19,5 +19,9 @@
     },
     "include": [
         "**/*"
-    ]
+    ],
+    "exclude":[
+        "node_modules",
+        "build",
+        "client/**/*"]
 }
