--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fs-extra": "~11.1.1",
     "inquirer": "~8.2.5",
     "loglevel": "~1.8.1",
+    "loglevel-plugin-prefix": "~0.8.4",
     "mustache": "~4.2.0",
     "process": "~0.11.10",
     "readline": "~1.3.0",
