--- a/src/templates/basic/clients/react-js/package.json
+++ b/src/templates/basic/clients/react-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "genezi-getting-started",
+  "name": "template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "react-uuid": "^2.0.0",
     "reactstrap": "^9.1.4",
     "web-vitals": "^2.1.4"
   },
