--- a/src/templates/basic/servers/typescript/package.json
+++ b/src/templates/basic/servers/typescript/package.json
@@ -2,7 +2,7 @@
   "name": "genezio-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "task.ts",
+  "main": "task.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
